# dann

./: .clang-tidy.yaml  .gitignore  CMakeLists.txt  DESIGN_DISTRIBUTED_IVF_STORAGE.md  PROTOBUF_FIX_SUMMARY.md  README.md  README_ANALYSIS.md  README_PROTOBUF.md  build.sh  cpu_profile.sh  dann_profile.sh  fix_protobuf_conflicts.sh  test_grpc_client.cpp  test_grpc_config.sh  test_protobuf_fix.sh  test_target_link_fix.sh
benchmark/: dann_bench  dann_bench.cpp  detailed_analysis.md  faiss_bench  faiss_bench.cpp  l2_distance_optimization.md  optimization_implementation.cpp  performance_optimization_summary.txt  profiling_report.txt
docs/: parquet_vector_storage_design.md
include/dann/: bulk_loader.h  clustering.h  config.h  consistency_manager.h  distributed_index_ivf.h  index.h  index_factory.h  index_shard.h  io_thread_pool.h  ivf_index.h  ivf_shard.h  local_storage.h  logger.h  message_handler.h  metrics.h  node_manager.h  query_router.h  redis_client.h  rpc_client.h  rpc_server.h  types.h  utils.h  vector_index.h  vector_index_v2.h
proto/: build_proto.sh  consistency.proto  node_management.proto  vector_service.proto
scripts/: build_hnsw_index.py  search_hnsw_index.py
src/: main.cpp
src/core/: bulk_loader.cpp  clustering.cpp  consistency_manager.cpp  distributed_index_ivf.cpp  index.cpp  index_factory.cpp  io_thread_pool.cpp  ivf_index.cpp  ivf_shard.cpp  node_manager.cpp  query_router.cpp  serialization.cpp  vector_index.cpp
src/network/: message_handler.cpp  rpc_client.cpp  rpc_server.cpp  vector_search_service_impl.cpp  vector_search_service_impl.h
src/storage/: local_storage.cpp  redis_client.cpp
src/utils/: config.cpp  logger.cpp  metrics.cpp  util.cpp
tests/: arrow_parquet_test.cpp  clustering_test.cpp  distributed_ivf_test.cpp  gtest_integration_test.cpp  test_main.cpp  vector_index_test.cpp
